4.9: Update to cupboard 3.7 26.1